TRUNK-6674: Rework duration unit resolution API per review
Address the review feedback on this PR:

- Replace getKnownCode(Concept) with getDuration(Integer, Concept) so
  callers go straight from the order fields to a Duration and reference
  term codes stay under the hood. The factory takes the length as well
  because a Duration carries it.
- Scope code lookups by concept source with one registry per
  vocabulary, so a code can never resolve through the wrong source.
  addToDate still accepts bare codes for API compatibility and consults
  the two registries in sequence.
- Restore getCode byte identical to master and deprecate it instead of
  reworking it. Its behavior is left unchanged because fhir2's
  DurationUnitTranslatorImpl still calls it expecting the raw SNOMED
  SAME-AS code.
- Build the registries with Map.ofEntries, which also fails fast on
  duplicate codes at class load.
- Log a warning naming the concept and the conflicting codes before
  refusing to resolve a concept whose mappings denote different units.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>